# docs/swagger.json
@@ -249,7 +249,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Order rules (date_asc for sorting by creation time from smallest to largest, date_desc for sorting by creation time from largest to smallest)",
+                        "description": "Order rules (date_asc for sorting by creation time from largest to smallest, date_desc for sorting by creation time from smallest to largest)",
                         "name": "order",
                         "in": "query"
                     }
@@ -526,7 +526,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Order rules (date_asc for sorting by creation time from smallest to largest, date_desc for sorting by creation time from largest to smallest)",
+                        "description": "Order rules (date_asc for sorting by creation time from largest to smallest, date_desc for sorting by creation time from smallest to largest)",
                         "name": "order",
                         "in": "query"
                     }
@@ -785,11 +785,11 @@
         "database.ActionStore": {
             "type": "object",
             "properties": {
+                "actionId": {
+                    "type": "integer"
+                },
                 "address": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
@@ -811,7 +811,7 @@
                 "cid": {
                     "type": "string"
                 },
-                "createTime": {
+                "time": {
                     "type": "string"
                 },
                 "tokenId": {
@@ -920,7 +920,7 @@
         "types.RankRes": {
             "type": "object",
             "properties": {
-                "rnakInfo": {
+                "rankInfo": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/types.RankInfo"
