# server/router/point.go
@@ -1,12 +1,16 @@
 package router
 
 import (
+	"encoding/json"
+	"io"
+	"net/http"
 	"strconv"
 	"time"
 
 	"github.com/gin-gonic/gin"
 	"github.com/memoio/xspace-server/database"
 	"github.com/memoio/xspace-server/types"
+	"golang.org/x/xerrors"
 )
 
 func LoadPointModules(r *gin.RouterGroup, h *handler) {
@@ -155,7 +159,7 @@ func (h *handler) finishAction(c *gin.Context) {
 //	@Param			page			query		string	true	"Pages"
 //	@Param			size			query		string	true	"The amount of data displayed on each page"
 //	@Param			actionID		query		string	false	"The action id"
-//	@Param			order			query		string	false	"Order rules (date_asc for sorting by creation time from smallest to largest, date_desc for sorting by creation time from largest to smallest)"
+//	@Param			order			query		string	false	"Order rules (date_asc for sorting by creation time from largest to smallest, date_desc for sorting by creation time from smallest to largest)"
 //	@Success		200				{object}	types.PointHistoryRes
 //	@Router			/v1/point/history [get]
 //	@Failure		400	{object}	error
@@ -168,7 +172,7 @@ func (h *handler) pointHistory(c *gin.Context) {
 	order := c.Query("order")
 
 	if order == "" {
-		order = "date_desc"
+		order = "date_asc"
 	}
 
 	if actionIdStr == "" {
@@ -306,5 +310,158 @@ func (h *handler) listProjects(c *gin.Context) {
 //	@Router			/v1/project/rank [get]
 //	@Failure		500	{object}	error
 func (h *handler) rank(c *gin.Context) {
-	c.JSON(200, types.RankRes{RankInfo: []types.RankInfo{{Rank: 1, Address: "0xcFA4816BE86B7b56A5373A36bE5B9c53c0f157f8", Scores: 100000, Points: 10000}}})
+	projrctId := c.Query("id")
+	pageStr := c.Query("page")
+	sizeStr := c.Query("size")
+
+	page, err := strconv.Atoi(pageStr)
+	if err != nil {
+		h.logger.Error(err)
+		c.AbortWithStatusJSON(400, err.Error())
+		return
+	}
+
+	size, err := strconv.Atoi(sizeStr)
+	if err != nil {
+		h.logger.Error(err)
+		c.AbortWithStatusJSON(400, err.Error())
+		return
+	}
+
+	if projrctId != "1" {
+		h.logger.Errorf("unkonw project id %s", projrctId)
+		c.AbortWithStatusJSON(400, "unkonw project id")
+		return
+	}
+
+	res, err := getDIDRank(page, size)
+	if err != nil {
+		h.logger.Error(err)
+		c.AbortWithStatusJSON(500, err.Error())
+		return
+	}
+
+	c.JSON(200, types.RankRes{RankInfo: res})
+}
+
+func getDIDRank(page, size int) ([]types.RankInfo, error) {
+	client := &http.Client{Timeout: time.Minute}
+	var url = "https://apapi.memoscan.org/api/points/rank"
+
+	req, err := http.NewRequest("GET", url, nil)
+	if err != nil {
+		return nil, err
+	}
+
+	res, err := client.Do(req)
+	if err != nil {
+		return nil, err
+	}
+	defer res.Body.Close()
+
+	data, err := io.ReadAll(res.Body)
+	if err != nil {
+		return nil, err
+	}
+
+	if res.StatusCode != http.StatusOK {
+		return nil, xerrors.Errorf(string(data))
+	}
+
+	var rankInfo = struct {
+		Result int
+		Data   []struct {
+			Uid           string
+			Points        int64
+			NickName      string
+			WalletAddress string
+			Avatar        string
+			Inviter       string
+			InviteCount   int
+		}
+	}{}
+	var result []types.RankInfo = make([]types.RankInfo, size)
+
+	err = json.Unmarshal(data, &rankInfo)
+	if err != nil {
+		return nil, err
+	}
+
+	offset := (page - 1) * size
+	for index := 0; index < size; index++ {
+		if offset+index >= len(rankInfo.Data) {
+			return result[:index], nil
+		}
+
+		result[index] = types.RankInfo{
+			Rank:    offset + index + 1,
+			Address: rankInfo.Data[offset+index].WalletAddress,
+			Scores:  rankInfo.Data[offset+index].Points,
+			Points:  getRankPoint(offset + index + 1),
+		}
+	}
+
+	// for index, rank := range rankInfo.Data {
+	// 	result[index] = types.RankInfo{
+	// 		Rank:    index + 1,
+	// 		Address: rank.WalletAddress,
+	// 		Scores:  rank.Points,
+	// 		Points:  getRankPoint(index + 1),
+	// 	}
+	// }
+
+	// if (page-1)*size >= len(result) {
+	// 	return nil, nil
+	// } else if page*size >= len(result) {
+	// 	return result[(page-1)*size:], nil
+	// }
+
+	return result, nil
+}
+
+func getRankPoint(rank int) int64 {
+	if rank <= 0 {
+		return 0
+	}
+
+	switch rank {
+	case 1:
+		return 10000
+	case 2:
+		return 8000
+	case 3:
+		return 6000
+	case 4:
+		return 5000
+	case 5:
+		return 4000
+	case 6:
+		return 3800
+	case 7:
+		return 3600
+	case 8:
+		return 3400
+	case 9:
+		return 3200
+	case 10:
+		return 3000
+	}
+
+	if rank <= 20 {
+		return 2000
+	} else if rank <= 50 {
+		return 1000
+	} else if rank <= 100 {
+		return 800
+	} else if rank <= 200 {
+		return 400
+	} else if rank <= 300 {
+		return 200
+	} else if rank <= 500 {
+		return 100
+	} else if rank <= 1000 {
+		return 60
+	}
+
+	return 0
 }
